<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item android:id="@+id/nav_import"
            android:icon="@drawable/importdata"
            android:title="@string/data"/>
        <item android:id="@+id/nav_export"
            android:icon="@drawable/exportdata"
            android:title="@string/exp_data"/>
        <item android:id="@+id/nav_heart"
            android:icon="@drawable/heartrate"
            android:title="@string/heart"/>
        <item android:id="@+id/nav_movement"
            android:icon="@drawable/kicks"
            android:title="@string/movement"/>
    </group>
</menu>