<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/last_record_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25sp"
            android:text="@string/last_recorded"
            android:textColor="@color/textColor"
            android:textSize="27sp" />

        <LinearLayout
            android:id="@+id/heart_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_record_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@drawable/heartrate"
                android:contentDescription="@string/heartrate_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heartrate_home"
                android:text="@string/heartrate_home"
                android:textColor="@color/textColor"
                android:textSize="70sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heartrate_unit"
                android:textColor="@color/textColor"
                android:paddingRight="6dp"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/kick_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heart_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@drawable/kicks"
                android:contentDescription="@string/kicks_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kicks_home"
                android:gravity="center"
                android:text="@string/kicks_home"
                android:textColor="@color/textColor"
                android:textSize="70sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kicks_unit"
                android:paddingRight="6dp"
                android:textColor="@color/textColor"
                android:textSize="30sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_home"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_below="@+id/kick_layout"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="60dp"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/info_text_home"
                android:textColor="@color/menuColor"
                android:textSize="27sp" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>