<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ImportDataFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/menuColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/discovered_devices_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discovered_devices"
                android:textColor="@color/textColor"
                android:textSize="28sp"
                android:layout_marginTop="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="65dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bluetoothDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:scrollbars="vertical"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarSize="2dp"
                android:verticalScrollbarPosition="right" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/loading_panel"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/scan_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:theme="@style/FabButtonTheme"
            android:layout_gravity="bottom|end"
            android:text="@string/scan"
            android:textColor="@color/menuColor"
            android:clickable="true"
            android:fontFamily="sans-serif"
            app:icon="@drawable/scan"
            app:iconTint="@color/menuColor"
            app:iconPadding="10dp"
            app:backgroundTint = "@color/fabColorTint"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/stop_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:theme="@style/FabButtonTheme"
            android:layout_gravity="bottom|end"
            android:text="@string/stop"
            android:textColor="@color/menuColor"
            android:clickable="true"
            android:fontFamily="sans-serif"
            app:icon="@drawable/stop"
            app:iconTint="@color/menuColor"
            app:iconSize="22dp"
            app:iconPadding="13dp"
            app:backgroundTint = "@color/fabColorTint"
            android:visibility="gone"
            android:focusable="true" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>